# LEDStripAnimationLibrary

./: Animation.cpp  Animation.h  AnimationDisplay.h  AnimationPreviewSDL.h  CMakeLists.txt  Color.h  ColorRGB.cpp  ColorRGB.h  ColorRGBW.h  FiniteAnimation.h  FunctionAnimation.h  FunctionAnimationDisplay.h  MirroredAnimation.h  MirroredAnimationDisplay.h  NeopixelAnimationDisplay.h  TimedAnimation.h  main.cpp
AnimationPreview/: AnimationPreviewSDL.cpp  AnimationPreviewSDL.h  CMakeLists.txt  SDLcleanup.h  main.cpp
